--- a/src/components/StatusBar/StatusBar.css
+++ b/src/components/StatusBar/StatusBar.css
@@ -4,7 +4,7 @@
     background: url(./fox-portfolio.svg) no-repeat center center;
     background-color: rgba(216, 216, 216, 0.7);
     background-size: 400px;
-    z-index: 1;
+    z-index: 100000;
 }
 
 .message {
