--- a/src/components/TableRecords/TableRecords.css
+++ b/src/components/TableRecords/TableRecords.css
@@ -1,11 +1,11 @@
 .TableRecords {
- 
+
   display: flex;
   overflow: hidden;
 
   vertical-align: top;
   max-width: 100%;
-  
+
   overflow-x: auto;
   white-space: nowrap;
 
@@ -47,7 +47,7 @@
   color: #000000;
   font-weight: bold;
   border-bottom: 1px solid #dedede;
-  font-size: 11px;
+  font-size: 14px;
   text-align: center;
   text-transform: uppercase;
   background: #ddd;
